# jon-tracker

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
.claude/: settings.json
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/joncas/jontracker/: MainActivity.kt
android/app/src/main/java/com/joncas/jontracker/api/: Models.kt  TrackerApi.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: month_widget_info.xml  network_security_config.xml  streak_widget_info.xml  today_widget_info.xml  week_widget_info.xml
android/gradle/: libs.versions.toml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  db.py  google.py  ics.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  calendar.py  features.py  ideas.py  tasks.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  BacklogView.svelte  DayView.svelte  FeaturesView.svelte  HelpDialog.svelte  InboxView.svelte  MonthView.svelte  StreaksDialog.svelte  StreaksView.svelte  TaskFormDialog.svelte  TodaySidebar.svelte  WeekGrid.svelte  app.css
frontend/src/lib/: active.ts  api.ts  dates.ts  keys.ts  theme.ts  types.ts  weeklyGoal.ts
scripts/: deploy.sh
worker/: claude_worker.py  idea_worker.py  mcp_server.py
(+35 files in other folders)
