[project]
name = "jon-tracker-backend"
version = "0.1.0"
description = "FastAPI backend for jon tracker"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "icalendar>=6.1",
    "recurring-ical-events>=3.4",
    "httpx>=0.27",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"
